Resource Load Statistics: Enable configuration through preferences https://bugs.webkit.org/show_bug.cgi?id=171949 <rdar://problem/31894518>

Reviewed by Alex Christensen.

Source/WebCore:

No new tests. Just an added setter.

* loader/ResourceLoadObserver.cpp:
(WebCore::ResourceLoadObserver::setReducedTimestampResolution):

Source/WebKit2:

* Shared/WebPreferencesDefinitions.h:
    Added ResourceLoadStatisticsTimeToLiveUserInteraction,
    ResourceLoadStatisticsTimeToLiveCookiePartitionFree, and
    ResourceLoadStatisticsReducedTimestampResolution.
* UIProcess/Cocoa/WebResourceLoadStatisticsManagerCocoa.mm: Added.
(WebKit::WebResourceLoadStatisticsManager::registerUserDefaultsIfNeeded):
* UIProcess/WebResourceLoadStatisticsManager.h:
* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::registerSharedResourceLoadObserver):
    Now calls WebResourceLoadStatisticsManager::registerUserDefaultsIfNeeded().
* WebKit2.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/188910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216690 268f45cc-cd09-0410-ab3c-d52691b4dbfc